# Terminal-messenger

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: config.hpp
src/client/: client.cpp  client.hpp  main_client.cpp
src/server/: chat_session.cpp  chat_session.hpp  database.cpp  database.hpp  server.cpp  server.hpp
